更新了关闭按钮的事件，以及样式的美化操作，尽量使用的是操作原生的dom实现一些基本的功能

--- a/cold_door_label/layout.html
+++ b/cold_door_label/layout.html
@@ -6,9 +6,16 @@
     <!--页面头部显示的logo-->
     <link rel="shortcut icon" href="../static/img/MEQEKRIv7oY.jpg"/>
     <title>layout</title>
+    <style>
+
+    </style>
 </head>
 <body>
-<header>this is header</header>
+<header>
+    <h1>
+        H5标签使用
+    </h1>
+</header>
 <nav>this is nav</nav>
 <main>this is main
     <article> this is article</article>
